# office-admin-claude-impl

./: README.md  main.py  pyproject.toml
docs/: architecture.md  component-contracts.md  domain-rules.md  google_setup.md  message-model.md
scripts/: OfficeAdmin.bat  office-admin.command
specs/: office-fastapi-backend.md
src/: api.py  calendar_worker.py  document_worker.py  mail_worker.py  models.py  office_admin.py  printer_worker.py
static/: app.js  styles.css
templates/: index.html
tests/: conftest.py  test_api.py  test_calendar_worker.py  test_document_worker.py  test_mail_worker.py  test_office_admin.py  test_printer_worker.py
