[project]
name = "office-admin-claude-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "pydantic>=2.13.2",
    "reportlab>=4.0.0",
    "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.11",
    "types-reportlab>=4.0.0",
]
